fix navbar and spacing

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -632,7 +632,7 @@ iframe {
     -webkit-transform: skew(20deg);
             transform: skew(20deg); }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .form-control {
     height: 49px; } }
 
@@ -1424,7 +1424,7 @@ hr.hr-dark {
     padding-top: 40px;
     margin-top: -40px; } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .bmi-form .col-lg-6.half-overlay-right,
   .bmi-form .col-lg-6.half-overlay-left {
     padding: 0 30px; }
@@ -1909,7 +1909,7 @@ hr.hr-dark {
   .mx-md-n10 {
     margin-left: -12rem !important; } }
 
-@media (min-width: 1452px) {
+@media (min-width: 992px) {
   .m-lg-n1 {
     margin: -.25rem !important; }
   .mt-lg-n1,
@@ -2885,7 +2885,7 @@ button {
   .feature-box-style-05 .feature-content p {
     padding-top: 10px; }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .feature-item.feature-box-style-03 {
     margin-bottom: 30px; } }
 
@@ -3079,7 +3079,7 @@ button {
     width: 25.00%;
     padding: 15px; } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .my-shuffle-container.columns-6 .grid-item {
     width: 33.333%;
     padding: 15px; }
@@ -3531,7 +3531,7 @@ ul.list.list-circle li i {
   .pricing-plan {
     padding: 30px 20px; } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .pricing-plan .pricing-icon img, .pricing-plan .pricing-icon i {
     height: auto;
     width: 200px; } }
@@ -4592,7 +4592,7 @@ ul.list.list-circle li i {
 /*****************************
   Responsive
 *****************************/
-@media (min-width: 1452px) {
+@media (min-width: 992px) {
   .navbar-nav .mega-menu {
     position: static; }
   .header .navbar .dropdown-menu {
@@ -4629,7 +4629,7 @@ ul.list.list-circle li i {
   .header .navbar .dropdown-menu.megamenu {
     left: 0; }
   .header .navbar .dropdown-menu.dropdown-menu-lg {
-    min-width: 992px; }
+    min-width: 1401px; }
   .header .navbar .dropdown:hover > .dropdown-menu {
     -webkit-transform: translate3d(-50%, 0, 0);
             transform: translate3d(-50%, 0, 0);
@@ -4652,7 +4652,7 @@ ul.list.list-circle li i {
   .header.header-style-02 .navbar .dropdown-menu.megamenu {
     left: 100%; } }
 
-@media (max-width: 1624px) {
+@media (max-width: 1199px) {
   /* Header */
   .header .navbar .navbar-brand {
     -webkit-box-flex: 0;
@@ -4690,7 +4690,7 @@ ul.list.list-circle li i {
   .header.default .navbar .navbar-nav .nav-item.header-search {
     display: none; } }
 
-@media (max-width: 1624px) {
+@media (max-width: 991px) {
   .header .navbar-collapse {
     position: absolute;
     top: 100%;
@@ -4807,7 +4807,7 @@ ul.list.list-circle li i {
   .header.header-transparent .main-header .menu-btn {
     display: none; } }
 
-@media (max-width: 1624px) {
+@media (max-width: 767px) {
   .navbar-expand-lg {
     min-width: 100% !important;
     left: 0; }
@@ -4816,7 +4816,7 @@ ul.list.list-circle li i {
   .header.default .navbar .navbar-toggler {
     right: 15px; } }
 
-@media (max-width: 1624px) {
+@media (max-width: 575px) {
   /* Header */
   .header .navbar .navbar-brand {
     -webkit-box-flex: 0;
@@ -5041,7 +5041,7 @@ ul.list.list-circle li i {
   .banner-02 .swiper-slide {
     padding: 230px 0px 90px; } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   /*Banner*/
   .banner-01 .swiper-slide {
     padding: 200px 0px 100px; }
@@ -5777,7 +5777,7 @@ ul.list.list-circle li i {
   .products-banner .features-section.amazing-features {
     padding: 80px 50px; } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .contact-us-form {
     padding-left: 0px; }
   .sign-in .navbar-brand img {
@@ -6336,7 +6336,7 @@ Blog Style 01
   position: absolute;
   top: 0; }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .blog-style-01 .blog-img .blog-info h3 {
     font-size: 22px;
     line-height: 26px; } }
@@ -7079,7 +7079,7 @@ Blog Style 01
     gap: 24px;
     grid-template-columns: repeat(4, 1fr); } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   .product {
     display: grid;
     gap: 24px;
@@ -7374,11 +7374,11 @@ Blog Style 01
   .about .section-title {
     margin-right: 90px; } }
 
-@media only screen and (min-width: 1456px) and (max-width: 1199px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .header .navbar .dropdown-menu a.dropdown-item {
     min-width: 140px; } }
 
-@media (max-width: 1456px) {
+@media (max-width: 991px) {
   h1 {
     font-size: 60px; }
   h2 {
